# image-palette

./: README.md  color_mode.py  demo.py  dominant_palette.py  image_palette.py  video_demo.py
c_version/: CMakeLists.txt  demo_viceo.cpp  image_algorithm.hpp
